multipod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multipod
  namespace: all-in-one
  labels:
    app: utopia
spec:
  containers:
  - name: utopia-db
    image: colinbradshaw/public-utopia:initialized-utopia-db
    ports:
    - containerPort: 3306
  - name: utopia-api
    image: colinbradshaw/public-utopia:multi-container
    ports:
    - containerPort: 8080
    readinessProbe:
      httpGet:
        path: /lms/user/2
        port: 8080
      initialDelaySeconds: 20
      periodSeconds: 15
      failureThreshold: 6
    livenessProbe:
      httpGet:
        path: /lms/user/2
        port: 8080
      initialDelaySeconds: 120
    
  imagePullSecrets:
  - name: regcred
