multipod-service.yml
apiVersion: v1
kind: Service
metadata:
  name: multipod-service
  namespace: all-in-one
spec:
  selector:
    app: utopia
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
