Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: utopia-service-loadbalancer
            port:
              number: 8080
